Properly update the current ImageInfo as well as the current url in slotThumbBarItemSelected.

Add some more emptiness checks which seem necessary to me.

BUG: 168461

svn path=/trunk/extragear/graphics/digikam/; revision=851606